styles.css
/* ... */
@media (min-width: 45em) {
  .primary-header::after {
    content: "";
    display: block;
    position: relative;
    height: 1px;
    background-color: hsl(var(--clr-white) / 0.25);
    width: 100%;
    order: 1;
    margin-right: -2.5rem;
  }

  nav {
    order: 2;
  }

  .primary-navigation {
    margin-block: 2rem;
  }
}

.underline-indicators > * {
  cursor: pointer;
  padding: var(--underline-gap, 0.5rem) 0;
  border: 0;
  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
  background-color: transparent;
}

.underline-indicators > *:focus {
  border-color: hsl(var(--clr-white) / 0.5);
}

@media (hover: hover) {
  .underline-indicators > *:hover {
    border-color: hsl(var(--clr-white) / 0.5);
  }
}

@media (min-width: 35rem) {
  .underline-indicators > .active,
  .underline-indicators > [aria-selected="true"] {
    color: hsl(var(--clr-white) / 1);
    border-color: hsl(var(--clr-white) / 1);
  }
}

.tab-list {
  --gap: 2rem;
}

.dot-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  padding: 0.5em;
  background-color: hsl(var(--clr-white) / 0.25);
}

.dot-indicators > *:hover,
.dot-indicators > *:focus {
  background-color: hsl(var(--clr-white) / 0.5);
}

.dot-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
}

.number-indicators > * {
  cursor: pointer;
  border: 1px solid hsl(var(--clr-white) / 0.5);
  border-radius: 50%;
  padding: 0.5em;
  width: 40px;
  font-size: 1rem;

  background-color: hsl(var(--clr-white) / 0);
  color: hsl(var(--clr-white) / 1);
}

.number-indicators > *:hover,
.number-indicators > *:focus {
  background-color: hsl(var(--clr-white) / 0.5);
}

.number-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
  color: hsl(var(--clr-dark));
}

body {
  background-size: cover;
  background-position: bottom center;
  background-repeat: no-repeat;
}
/* home */
.home {
  background-image: url(./assets/home/background-home-mobile.jpg);
}

@media (min-width: 35rem) {
  .home {
    background-position: center center;
    background-image: url(./assets/home/background-home-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .home {
    background-image: url(./assets/home/background-home-desktop.jpg);
  }
}

/* destination */
.destination {
  background-image: url(./assets/destination/background-destination-mobile.jpg);
}

@media (min-width: 35rem) {
  .destination {
    background-position: center center;
    background-image: url(./assets/destination/background-destination-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .destination {
    background-image: url(./assets/destination/background-destination-desktop.jpg);
  }
}

/* crew */
.crew {
  background-image: url(./assets/crew/background-crew-mobile.jpg);
}

@media (min-width: 35rem) {
  .crew {
    background-position: center center;
    background-image: url(./assets/crew/background-crew-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .crew {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
  }
}

/* tech */
.tech {
  background-image: url(./assets/technology/background-technology-mobile.jpg);
}

@media (min-width: 35rem) {
  .tech {
    background-position: center center;
    background-image: url(./assets/technology/background-technology-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .tech {
    background-image: url(./assets/technology/background-technology-desktop.jpg);
  }
}

/* ----------------------------- */
/* Layout                        */
/* ----------------------------- */

.grid-container {
  text-align: center;
  display: grid;
  place-items: center;
  padding-inline: 1rem;
  padding-bottom: 4rem;
}

.grid-container--home p {
  max-width: 50ch;
}

.numbered-title {
  grid-area: title;
}

/* Destination Layout */

.grid-container--destination {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--destination > picture {
  grid-area: image;
  max-width: 60%;
  align-self: center;
}

.grid-container--destination > .tab-list {
  grid-area: tabs;
}

.destination-info {
  grid-area: content;
}

.destination-meta {
  flex-direction: column;
  border-top: 1px solid hsl(var(--clr-white) / 0.1);
  padding-top: 2.5rem;
  margin-top: 2.5rem;
}

.destination-meta p {
  font-size: 1.75rem;
}

/* Crew Layout */

.grid-container--crew {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--crew > picture {
  grid-area: image;
  max-width: 60%;
  border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
}

.grid-container--crew > .dot-indicators {
  grid-area: tabs;
}

.crew-details {
  grid-area: content;
}

.crew-details h2 {
  opacity: 0.5;
}

/* Tech Layout */

.grid-container--tech {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
  padding-inline: 0;
}

.grid-container--tech > picture {
  grid-area: image;
  max-width: 100%;
  border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
}

.mobile-img {
  display: block;
}

.desktop-img {
  display: none;
}

.grid-container--crew > .number-indicators {
  grid-area: tabs;
}

.tech-details {
  grid-area: content;
}

.tech-details h2 {
  opacity: 0.5;
}

.tech-details p {
  padding: 1rem;
}

@media (min-width: 35em) {
  .numbered-title {
    justify-self: start;
    margin-top: 2rem;
  }

  .destination-meta {
    flex-direction: row;
    justify-content: space-evenly;
  }

  .grid-container--crew {
    --flow-space: 2rem;
    grid-template-areas:
      "title"
      "content"
      "tabs"
      "image";

    padding-bottom: 0;
  }

  .number-indicators > * {
    width: 58px;
    padding: 1rem;
    font-size: 1rem;
  }
}
/* ... */

